--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "course_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "s",
+    "start": "node dist/app.js",
+    "dev:ts": "tsc -w",
+    "dev:js": "nodemon ./dist/app.js",
     "build": "tsc -p ."
   },
   "author": "artemij-petrovskij",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.7.0",
+    "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
 }
