--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "artemij-petrovskij",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
