--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "start": "node dist/app.js",
     "dev:ts": "tsc -w",
     "dev:js": "nodemon ./dist/app.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "dev": "concurrently npm:dev:*"
   },
   "author": "artemij-petrovskij",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.7.0",
+    "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   }
