--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "course_project",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
     "dev:ts": "tsc -w",
